--- a/views/index.mustache
+++ b/views/index.mustache
@@ -1,212 +1,337 @@
 <!DOCTYPE html>
-<html dir="ltr" lang="en-US">
 <head>
-  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-  <link rel="stylesheet" href="/css/bootstrap.css" type="text/css" />
-	<style style="text/css">
-		.categories a {
-			text-transform: capitalize;
-		}
-	</style>
+  {{>head}}
 </head>
 
-<body style="padding-top:70px">
-  {{>nav}}
+<body>
 
-	<div class="row">
+<div id="wrapper">
 
-		<div class="col-md-2 col-md-offset-2">
-			<h1>categories</h1>
-			<hr />
-			<ul class="categories">
-				{{#categories}}
-				<li><a class="category-link" href="#">{{.}}</a></li>
-				{{/categories}}
-			</ul>
-		</div>
+<header id="header-container" class="fixed fullwidth">
+	<div id="header" class="not-sticky">
+		<div class="container">
 
-		<div class="col-md-4">
-			<h1>templates</h1>
-			<hr />
-			<div id="templates"></div>
-		</div>
+			<div class="left-side">
 
-    <div class="col-md-4">
-			<h1>auth</h1>
-			<hr />
-      <form>
-        <input id="input-register-name" type="text" placeholder="Name" name="name" /><br />
-        <input id="input-register-email" type="text" placeholder="Email" name="email" /><br />
-        <input id="input-register-pasword" type="password" placeholder="Password" name="password" /><br />
-        <button id="btn-register">Register</button>
-      </form>
-      <br />
-
-      <form>
-        <input id="input-email" type="text" placeholder="Email" name="email" /><br />
-        <input id="input-pasword" type="password" placeholder="Password" name="password" /><br />
-        <button id="btn-login">Log In</button>
-      </form>
-		</div>
-
-	</div>
-
-	<script type="text/template" id="tpl-list-item-template">
-		<li>
-			<div>
-          <a href="/template/<% slug %>">
-					  <strong><% name %></strong>
+				<div id="logo">
+					<a href="/">
+            <img src="https://storage.turbo360.co/vertex360-cms-4hujkc/vertex-logo-2.svg" alt="Vertex 360">
           </a>
+				</div>
+
+				<div class="mmenu-trigger">
+					<button class="hamburger hamburger--collapse" type="button">
+						<span class="hamburger-box">
+							<span class="hamburger-inner"></span>
+						</span>
+					</button>
+				</div>
+
 			</div>
-		</li>
-	</script>
 
-	<script type="text/javascript">window.__PRELOADED_DATA__ = {{{preloaded}}}</script>
-  <script type="text/javascript" src="/js/jquery.js"></script>
-	<script type="text/javascript" src="/js/mustache.js"></script>
-  <script type="text/javascript">
-    (function(){
-      Mustache.tags = ["<%", "%>"] // change delimiter so it doesn't conflict server side
+			<div class="right-side">
+				<div class="header-widget">
+          <nav id="navigation" class="style-1">
+  					<ul id="responsive">
+  						<li><a class="current" href="/">Home</a></li>
+  						<li><a href="#">How It Works</a></li>
+  					</ul>
+  				</nav>
+          <div id="login-container">
+  					<a id="btn-login" href="#sign-in-dialog" class="button with-icon popup-with-zoom-anim">Log In <i class="sl sl-icon-login" style="padding-left:4px"></i></a>
+          </div>
+				</div>
+			</div>
 
-      const data = window.__PRELOADED_DATA__
-      const templates = data.templates
-      var selected = data.selected
-      var user = data.user
+      {{>auth}}
+		</div>
+	</div>
+</header>
 
-      if (user == null){
-        $('#btn-account-container').html('')
-        $('#btn-register').click(function(event){
-          if (event)
-            event.preventDefault()
+<div class="clearfix"></div>
 
-          var visitor = {
-            fullName: $('#input-register-name').val(),
-            email: $('#input-register-email').val(),
-            password: $('#input-register-pasword').val()
-          }
+<div class="fs-container">
 
-          if (visitor.fullName.length == 0){
-            alert('Please enter your NAME')
+	<div class="fs-inner-container content">
+		<div class="fs-content">
+
+			<section class="search bg-yellow">
+        <h2>Professional Websites. Fast.</h2>
+        <p>
+          Create fully-featured professional websites in minutes. Select a template
+          below to get started.
+        </p>
+			</section>
+
+  		<section class="listings-container margin-top-30">
+  			<div class="row fs-listings">
+
+  				{{#templates}}
+  				<div class="col-lg-12 col-md-12">
+  					<div class="listing-item-container list-layout">
+  						<a href="#" class="listing-item template-preview" id="{{index}}">
+
+  							<div class="listing-item-image">
+  								<img src="{{image}}=s360-c" alt="">
+  							</div>
+
+  							<div class="listing-item-content">
+
+  								<div class="listing-item-inner" style="padding-right:0px">
+  									<h3>{{name}}</h3>
+  									<span>{{template.category}}</span>
+                    <div class="profile-row">
+                      <img class="profile-icon" src="{{profile.image}}=s64-c" />
+  										<span>{{profile.username}}</span>
+  									</div>
+  								</div>
+
+  							</div>
+  						</a>
+  					</div>
+  				</div>
+          {{/templates}}
+  			</div>
+
+  			<div class="row fs-listings">
+  				<div class="col-md-12">
+  					<div style="text-align:left" class="copyrights margin-top-0">&copy; 2019 Vertex 360. All Rights Reserved.</div>
+  				</div>
+  			</div>
+  		</section>
+
+		</div>
+	</div>
+	<div id="selected-template-container" class="fs-inner-container map-fixed" style="overflow:scroll">
+    <div id="selected-template" class="blog-post" style="margin-top:0px"></div>
+	</div>
+</div>
+
+
+</div>
+<!-- Wrapper / End -->
+
+<script type="text/template" id="tpl-selected-template">
+  <div class="post-content selected-template">
+    <img src="<% image %>=s1024" alt="Vertex 360">
+    <h3><a class="capitalize" href="#"><% name %></a></h3>
+    <ul class="post-meta">
+      <li class="capitalize"><% template.category %></li>
+      <li class="capitalize">Free</li>
+      <li>
+        <a target="_blank" href="https://<% slug %>.vertex360.co" style="color:#37b6bd;">Example</a>
+        <i class="sl sl-icon-share-alt" style="padding-left:4px;color:#37b6bd;"></i>
+      </li>
+    </ul>
+    <hr />
+    <p><% description %></p>
+    <h4 style="margin-top:20px">Screenshots</h4>
+    <%#images %>
+    <div class="screenshot"><img src="<% . %>" /></div>
+    <%/images %>
+
+    <hr />
+    <p style="margin-bottom:16px">Launch this template on your account.</p>
+    <div id="launch-template-container" style="width:50%">
+      <input id="input-site-name" type="text" placeholder="Your Site Name" />
+      <div id="btn-launch-container">
+        <a style="margin-top:4px" id="btn-clone-template" href="#" class="button with-icon">Use This Template <i class="fa fa-angle-right"></i></a>
+      </div>
+    </div>
+
+  </div>
+</script>
+
+<script type="text/javascript">window.__PRELOADED__ = {{{preloaded}}}</script>
+<script type="text/javascript" src="{{{cdn}}}/dist/js/vendor.min.js"></script>
+<script>
+  (function(){
+    Mustache.tags = ["<%", "%>"] // change delimiter so it doesn't conflict server side
+
+    var data = window.__PRELOADED__
+    var templates = data.templates // this is an array
+    var selected = data.selected
+    var user = data.user
+
+    var postRequest = function(url, data, completion){
+      $.ajax({
+        url: url,
+        type: 'POST',
+        data: data,
+        success: function(response, status, xhr){
+          if (response.confirmation != 'success'){
+            completion(response, null) // 'data' is the error object here.
             return
           }
 
-          if (visitor.email.length == 0){
-            alert('Please enter your EMAIL')
-            return
-          }
+          completion(null, response)
+        },
+        error: function(xhr, status, err){
+          completion(err, null)
+        }
+      })
+    }
 
-          if (visitor.password.length == 0){
-            alert('Please enter your PASSWORD')
-            return
-          }
-
-          $.ajax({
-            url: '/account/register',
-            type: 'POST',
-            data: visitor,
-            success: function(response, status, xhr){
-              if (response.confirmation != 'success'){
-                alert('Error: ' + response.message)
-    						return
-    					}
-
-              window.location.href = '/me'
-            },
-            error: function(xhr, status, err){
-              alert('Error: ' + err.message)
-            }
-          })
-        })
-
-        $('#btn-login').click(function(event){
-          if (event)
-            event.preventDefault()
-
-          var visitor = {
-            email: $('#input-email').val(),
-            password: $('#input-pasword').val()
-          }
-
-          if (visitor.email.length == 0){
-            alert('Please enter your EMAIL')
-            return
-          }
-
-          if (visitor.password.length == 0){
-            alert('Please enter your PASSWORD')
-            return
-          }
-
-          $.ajax({
-            url: '/account/login',
-            type: 'POST',
-            data: visitor,
-            success: function(response, status, xhr){
-              if (response.confirmation != 'success'){
-                alert('Error: ' + response.message)
-    						return
-    					}
-
-              window.location.href = '/me'
-            },
-            error: function(xhr, status, err){
-              alert('Error: ' + err.message)
-            }
-          })
-        })
-      }
-
-
-      var fetchTemplates = function(category){
-        $.ajax({
-          url: '/api/site?template.status=live&template.category='+category,
-          type: 'GET',
-          data: null,
-          success: function(response, status, xhr){
-            if (response.confirmation != 'success'){
-              alert(response.message)
-              return
-            }
-
-            templates[category] = response.results
-            reloadUI()
-          },
-          error: function(xhr, status, err){
-            alert(err.message)
-          }
-        })
-      }
-
-      var reloadUI = function(){
-        const templatesList = templates[selected]
-        if (templatesList == null){
-          fetchTemplates(selected)
+    // checks if a template is ready when cloning:
+    var checkTemplate = function(siteSlug){
+      var body = {template:siteSlug}
+      postRequest('/account/check-template', body, function(err, response){
+        if (err){
+          console.log('TEMPLATE NOT READY: ')
+          setTimeout(function(){
+            checkTemplate(siteSlug)
+          }, 4000)
           return
         }
 
-        var html = '<ol>'
-        var template = $('#tpl-list-item-template').html()
-        templatesList.forEach(function(summary, i){
-          html += Mustache.render(template, summary)
-        })
+        // console.log('CHECK TEMPLATE: ' + JSON.stringify(response))
+        if (response.confirmation != 'success'){
+          alert('Error - ' + response.message)
+          return
+        }
 
-        html += '</ol>'
-        $('#templates').html(html)
+        window.location.href = '/admin/'+siteSlug
+      })
+    }
+
+    var launchTemplate = function(){
+      if (user == null){
+        alert('Please log in or register to clone this site.')
+        return
       }
 
-      $('.category-link').each(function(i, link){
-        $(this).click(function(event){
-          if (event)
-            event.preventDefault()
+      var body = {
+        name: $('#input-site-name').val().trim(), // this needs to be entered by the user,
+        source: selected.id // ID of the template being copied
+        // source: template.id // ID of the template being copied
+      }
 
-          selected = $(this).html()
-          reloadUI()
+      if (body.name.length == 0){
+        alert('Please enter a name for your site')
+        return
+      }
+
+      $('#btn-launch-container').html("<img style='width:100px' src='https://storage.turbo360.co/vertex360-cms-4hujkc/loader.gif' /><br /><em>Launching your site...</em>")
+      postRequest('/account/launch-template', body, function(err, response){
+        if (err){
+          alert('Error: ' + err.message)
+          return
+        }
+
+      // console.log('SITE LAUNCHED: ' + JSON.stringify(response))
+        setTimeout(function(){
+          checkTemplate(response.data.slug)
+        }, 4000)
+      })
+    }
+
+    if (user == null){
+      $('#input-register').click(function(event){
+        if (event)
+          event.preventDefault()
+
+        var visitor = {
+          fullName: $('#input-register-name').val(),
+          email: $('#input-register-email').val(),
+          password: $('#input-register-password').val()
+        }
+
+        if (visitor.fullName.length == 0){
+          alert('Please enter your NAME')
+          return
+        }
+
+        if (visitor.email.length == 0){
+          alert('Please enter your EMAIL')
+          return
+        }
+
+        if (visitor.password.length == 0){
+          alert('Please enter your PASSWORD')
+          return
+        }
+
+        postRequest('/account/register', visitor, function(err, response){
+          if (err){
+            alert(err.message)
+            return
+          }
+
+          window.location.href = '/me'
         })
       })
 
-      reloadUI()
-    })()
+      $('#input-login').click(function(event){
+        if (event)
+          event.preventDefault()
 
-  </script>
+        var visitor = {
+          email: $('#input-login-email').val(),
+          password: $('#input-login-password').val()
+        }
+
+        if (visitor.email.length == 0){
+          alert('Please enter your EMAIL')
+          return
+        }
+
+        if (visitor.password.length == 0){
+          alert('Please enter your PASSWORD')
+          return
+        }
+
+        postRequest('/account/login', visitor, function(err, response){
+          if (err){
+            alert(err.message)
+            return
+          }
+
+          window.location.href = '/me'
+        })
+      })
+    }
+    else {
+      $('#login-container').html('<a href="/me" class="button">My Account</a>')
+    }
+
+    var reloadUI = function(){
+      $('#selected-template-container').animate({
+         scrollTop: 0
+      }, 'slow');
+
+      var tpl = $('#tpl-selected-template').html()
+      $('#selected-template').html(Mustache.render(tpl, selected))
+      $('#btn-clone-template').click(function(event){
+        if (event)
+          event.preventDefault()
+
+        // TODO: check if user logged in. if so, don't do this:
+        if (user == null)
+          document.getElementById('btn-login').click()
+        else {
+          // console.log('LAUNCH TEMPLATE')
+          launchTemplate()
+        }
+      })
+    }
+
+    $('.template-preview').each(function(i, el){
+      $(this).click(function(event){
+        if (event)
+          event.preventDefault()
+
+        var template = templates[this.id]
+        if (template.id == selected.id)
+          return
+
+        selected = template
+        reloadUI()
+      })
+    })
+
+    reloadUI()
+  })()
+</script>
+
 </body>
 </html>
